# maystorm

./: .gitignore  Makefile  README.md
apps/: Cargo.toml
apps/cube/src/: main.rs
apps/kray/src/: main.rs
apps/noiz2bg/src/: main.rs
assets/initrd/: startup.txt
boot/: Cargo.toml
boot/boot-efi/: Cargo.toml
boot/boot-efi/src/: main.rs
boot/boot-efi/src/invocation/: amd64.rs  mod.rs  x86_32.rs
boot/boot-efi/src/loader/: elfldr.rs
boot/boot-efi/src/page/: amd64.rs  mod.rs
boot/lib-efi/: Cargo.toml
boot/lib-efi/src/: lib.rs
boot/lib-efi/src/debug/: mod.rs
lib/bootprot/src/: lib.rs
lib/meggl/: Cargo.toml
lib/meggl/src/: bitmap.rs  coords.rs  vec.rs
lib/megstd/: Cargo.toml
lib/megstd/src/: lib.rs
lib/x86/: Cargo.toml
lib/x86/src/: cr.rs  efer.rs  lib.rs  prot.rs
system/: Cargo.toml
system/src/: hal.rs  init.rs  lib.rs  main.rs  system.rs
system/src/arch/x64/: apic.rs  cpu.rs  rtc.rs
system/src/drivers/hda/: hdaudio.rs
system/src/drivers/pci/: pci.rs
system/src/drivers/usb/: usb.rs  usb_mgr.rs
system/src/drivers/usb/drivers/: usb_hid.rs  usb_hub.rs
system/src/drivers/usb/xhci/: xhci.rs
system/src/fs/: devfs.rs
system/src/io/: tty.rs
system/src/io/audio/: mod.rs
system/src/mem/: fixedvec.rs  mm.rs
system/src/rt/: mod.rs
system/src/rt/haribote/: hoe.rs
system/src/rt/wasm/: maystorm.rs
system/src/sync/: semaphore.rs
system/src/task/: scheduler.rs
system/src/ui/: terminal.rs  text.rs  theme.rs  window.rs
system/src/ui/font/: font.rs
system/src/utils/: log.rs
tools/: Cargo.toml
tools/mkfdfs/: Cargo.toml
