[workspace]
resolver = "2"
members = [
  "boot-efi",
]

[profile.release]
# lto = true
opt-level = "z"

[workspace.dependencies]
bitflags = { version="2.5.0" }
uefi = { version="0.28.0", features = ['alloc']}
uefi-services = { version="0.25.0", default-features = false}
uefi-raw = {version="0.5.2"}
