[package]
authors = ["Nerry <108566+neri@users.noreply.github.com>"]
edition = "2021"
name = "boot-efi"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootprot = {path = "../../lib/bootprot"}
lib-efi = {path = "../lib-efi"}
myelf = {path="../../lib/myelf"}

uefi.workspace = true

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
x86 = {path="../../lib/x86"}
